<resources>
    <string name="app_name">MinhaProva</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="button2">Button2</string>
    <string name="button1">Button1</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="cancelar">Cancelar</string>
    <string name="boasVindas">Seja bem vindo!</string>
    <string name="ok">OK</string>
    <string name="msgOtimo">Otimo!</string>
    <string name="msgDialog">Gostaria de uma xícara de café?</string>
    <string name="msgTitle">Pergunta Importante!</string>
    <string name="msgCancelar">Fica para a próxima.</string>
    <string name="msgBoasVindas">Seja bem vindo!</string>
    <string name="invalido">Invalido!</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="digiteAlgo">Digite Algo.</string>
    <string name="autor">Autor</string>
    <string name="ano">Ano</string>
    <string name="nota">Nota</string>
    <string name="salvar">Salvar</string>
    <string name="livros">Livros</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Proximo</string>
    <string name="textview">TextView</string>
    <string name="cadastrado">Cadastrado</string>
</resources>